--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -343,4 +343,41 @@
     <string name="attachment_picture" msgid="3709286281567284296">"Immagine"</string>
     <string name="notification_separator" msgid="2334673105226536422">"  "</string>
     <string name="enumeration_comma" msgid="213598026698964628">", "</string>
+    <string name="pref_title_sms_split_counter">Contatore SMS</string>
+    <string name="pref_summary_sms_split_counter">Indica quanti SMS compongono il messaggio</string>
+    <string name="prefs_templates_settings">Modelli sms</string>
+    <string name="pref_title_templates_manage">Modelli</string>
+    <string name="pref_summary_templates_manage">Gestisci i tuoi modelli</string>
+    <string name="pref_title_templates_show_gesture">Gesture</string>
+    <string name="pref_summary_templates_show_gesture">Mostra traccia della gesture</string>
+    <string name="pref_title_template_gestures_sensitivity">Sensibilità gesture</string>
+    <string name="template_save">Salva</string>
+    <string name="template_insert_hint">Inserisci qui il testo del modello</string>
+    <string name="template_empty_text">Il testo non può essere vuoto</string>
+    <string name="template_explanation">Inserisci o modifica il testo del modello e, opzionalmente, disegna una gesture a cui associarlo</string>
+    <string name="template_edit">Modifica</string>
+    <string name="template_delete">Elimina</string>
+    <string name="template_ctx_menu_title">Azioni</string>
+    <string name="template_list_title">Modelli</string>
+    <string name="template_new_title">Nuovo modello</string>
+    <string name="template_insert">Inserisci modello</string>
+    <string name="template_gesture_draw">Disegna la gesture nello spazio sottostante</string>
+    <string name="template_not_present_error">Non hai ancora definito alcun modello</string>
+    <string name="template_not_present_error_title">Errore</string>
+    <string name="template_select">Seleziona un modello</string>
+    <string name="template_cancel_confirm_title">Attenzione</string>
+    <string name="template_cancel_confirm_text">Vuoi davvero cancellare questo modello?</string>
+    <string name="gestures_already_present">Attenzione! Una gesture simile è associata ad un altro template</string>
+    <string name="pref_title_mms_notification_vibrate_settings">Impostazioni vibrazione</string>
+    <string name="pref_title_mms_notification_vibrate_pattern">Schema vibrazione</string>
+    <string name="pref_summary_mms_notification_vibrate_pattern">Cambia schema di vibrazione</string>
+    <string name="pref_title_mms_notification_vibrate_call">Vibrazione in chiamate</string>
+    <string name="pref_summary_mms_notification_vibrate_call">Permetti la vibrazione durante una chiamata</string>
+    <string name="pref_title_mms_notification_vibrate_custom">Schema personalizzato</string>
+    <string name="pref_text_mms_notification_vibrate_custom">Formatta off/on in millisecondi: off, on, off, on, ...</string>
+    <string name="pref_extra_settings">Impostazioni aggiuntive</string>
+    <string name="pref_title_mms_full_timestamp">Timestamp completi</string>
+    <string name="pref_summary_mms_full_timestamp">Visualizza data e ora nei timestamp</string>
+    <string name="pref_title_mms_use_sent_timestamp">Timestamp originali</string>
+    <string name="pref_summary_mms_use_sent_timestamp">Visualizza la data di invio, non quella di ricezione</string>
 </resources>
