--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -380,4 +380,23 @@
     <string name="pref_summary_mms_full_timestamp">Exibe tanto data quanto hora</string>
     <string name="pref_title_mms_use_sent_timestamp">Data/hora original</string>
     <string name="pref_summary_mms_use_sent_timestamp">Exibe data de envio em vez de data de recebimento</string>
+    <string name="menu_insert_emoji">Inserir emojis</string>
+    <string name="pref_title_strip_unicode">Retirar unicode</string>
+    <string name="pref_summary_strip_unicode">Substituir caracteres comuns que não são suportados em mensagens SMS de 160 caracteres</string>
+    <string name="pref_title_enable_emojis">Suporte emoji</string>
+    <string name="pref_summary_enable_emojis">Ativa o suporte a emojis unicode, um conjunto de 471 emoticons</string>
+    <string name="pref_quickmessage">Mensagem Rápida</string>
+    <string name="pref_quickmessage_title">Ativar Mensagem Rápida</string>
+    <string name="pref_quickmessage_summary">Exibe a caixa de diálogo da Mensagem Rápida</string>
+    <string name="pref_wake_unlock_title">Despertar e desbloquear</string>
+    <string name="pref_wake_unlock_summary">Desperta e desbloqueia o dispositivo quando uma mensagem é recebida (somente em telas de bloqueio inseguras)</string>
+    <string name="pref_close_all_title">Fechar tudo</string>
+    <string name="pref_close_all_summary">Botão fechar fecha todas as mensagens</string>
+    <string name="message_counter_separator">de</string>
+    <string name="button_close">Fechar</string>
+    <string name="button_view">Ver</string>
+    <string name="type_to_reply_text_enter_to_send">Digite para responder</string>
+    <string name="toast_sending_message">Enviando mensagem</string>
+    <string name="qm_quick_reply">Resposta rápida</string>
+    <string name="button_templates">Modelos</string>
 </resources>
