--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -32,8 +32,7 @@
     <string name="menu_delete_all" msgid="808729454898114735">"Eliminar todas las conversaciones"</string>
     <string name="menu_delete" msgid="1851666911396479006">"Eliminar cadena"</string>
     <string name="menu_view" msgid="7448852683948080108">"Ver conversación"</string>
-    <string name="menu_debug_dump" msgid="6855869130206549643">"VOLCADO DE DEPURACIÓN"</string>
-    <string name="refreshing" msgid="987335057871404222">"Actualizando..."</string>
+    <string name="refreshing" msgid="987335057871404222">"Actualizando\u2026"</string>
     <string name="menu_cell_broadcasts" msgid="5646161375983084660">"Difusiones móviles"</string>
     <string name="has_draft" msgid="2487465595514636160">"Borrador"</string>
     <string name="no_subject_view" msgid="7795086723069563537">"(Sin asunto)"</string>
@@ -50,7 +49,7 @@
     <string name="delete_thread" msgid="757258847736632791">"Eliminar cadena"</string>
     <string name="menu_forward" msgid="9026858380050046756">"Reenviar"</string>
     <string name="download" msgid="4488877642230207631">"Descargar"</string>
-    <string name="downloading" msgid="1779557575565350637">"Descargando..."</string>
+    <string name="downloading" msgid="1779557575565350637">"Descargando\u2026"</string>
     <string name="inline_subject" msgid="4057621785274119260">"&lt;Asunto: <xliff:g id="SUBJECT">%s</xliff:g>&gt;"</string>
     <string name="drm_protected_text" msgid="1396394157870730742">"* texto protegido por DRM *"</string>
     <string name="insufficient_drm_rights" msgid="6989074725969164383">"Derechos DRM insuficientes"</string>
@@ -84,7 +83,7 @@
     <string name="all_threads" msgid="2663426830306307194">"Todas las conversaciones"</string>
     <string name="type_to_compose_text_enter_to_send" msgid="3539985471008581265">"Escribir mensaje"</string>
     <string name="open_keyboard_to_compose_message" msgid="7860109685511253191">"Abrir teclado para escribir mensaje"</string>
-    <string name="compressing" msgid="1961357529661045180">"La imagen es demasiado grande. Comprimiendo…"</string>
+    <string name="compressing" msgid="1961357529661045180">"La imagen es demasiado grande. Comprimiendo\u2026"</string>
     <string name="unsupported_media_format" msgid="1350489690977363764">"Formato de <xliff:g id="NAME">%1$s</xliff:g> no admitido"</string>
     <string name="select_different_media" msgid="6241623357299382183">"Seleccionar otro <xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="exceed_message_size_limitation" msgid="6027753647094742437">"Se ha alcanzado el límite de tamaño del mensaje."</string>
@@ -92,7 +91,7 @@
     <string name="failed_to_add_media" msgid="7207464170168708485">"No puedes añadir <xliff:g id="NAME">%1$s</xliff:g> al mensaje."</string>
     <string name="failed_to_resize_image" msgid="5608354151631833669">"No se ha podido ajustar el tamaño de la imagen."</string>
     <string name="resize_image_error_information" msgid="3783200130776554475">"Esta imagen es demasiado grande para enviarla aunque se ajuste su tamaño."</string>
-    <string name="forward_prefix" msgid="276280492803486464">"Fwd: "</string>
+    <string name="forward_prefix" msgid="276280492803486464">"Fwd:\u0020"</string>
     <string name="discard_message_reason" msgid="2667664943003796133">"El mensaje se descartará porque los destinatarios no son válidos."</string>
     <string name="has_invalid_recipient" msgid="1485388396900997383">"Destinatarios no válidos: &lt;<xliff:g id="NAME">%1$s</xliff:g>&gt;"</string>
     <string name="invalid_destination" msgid="4573835601024786416">"Dirección de destino no válida"</string>
@@ -103,8 +102,8 @@
     <string name="cannot_send_message" msgid="3414307479833622644">"No se puede enviar el mensaje"</string>
     <string name="cannot_send_message_reason" msgid="8745080126044054343">"Los destinatarios del mensaje no son válidos."</string>
     <string name="cannot_forward_drm_obj" msgid="5047623751430559077">"No se puede reenviar el objeto DRM incluido en el mensaje."</string>
-    <string name="converting_to_picture_message" msgid="2980023239017588627">"Convirtiendo en mensaje multimedia..."</string>
-    <string name="converting_to_text_message" msgid="6374423235426015422">"Convirtiendo en mensaje de texto..."</string>
+    <string name="converting_to_picture_message" msgid="2980023239017588627">"Convirtiendo en mensaje multimedia\u2026"</string>
+    <string name="converting_to_text_message" msgid="6374423235426015422">"Convirtiendo en mensaje de texto\u2026"</string>
     <string name="cannot_add_slide_anymore" msgid="4631404749618820994">"No puedes añadir más diapositivas."</string>
     <string name="cannot_add_picture_and_video" msgid="4954353772391381447">"No puedes añadir vídeos a una diapositiva que ya tenga imágenes o viceversa."</string>
     <string name="cannot_save_message" msgid="3375907366965264446">"No se puede guardar el mensaje."</string>
@@ -113,14 +112,14 @@
     <string name="too_many_attachments" msgid="3774037894899750070">"Existe un límite de <xliff:g id="MAXLIMIT">%1$s</xliff:g> archivos adjuntos. Solo se añadirán los <xliff:g id="CURRENTCOUNT">%2$s</xliff:g> primeros."</string>
     <string name="adding_attachments_title" msgid="2034535554212405529">"Añadiendo archivos adjuntos"</string>
     <string name="adding_attachments" msgid="5871373105122355632">"Espera mientras se añaden los elementos a la presentación."</string>
-    <string name="building_slideshow_title" msgid="1232338692400726385">"Creando presentación..."</string>
+    <string name="building_slideshow_title" msgid="1232338692400726385">"Creando presentación\u2026"</string>
     <string name="cannot_play_audio" msgid="253920977253666735">"No se puede reproducir el audio."</string>
     <string name="preview" msgid="5438149136136446756">"Vista previa"</string>
     <string name="preview_slideshow" msgid="6824095909448728427">"Vista previa"</string>
     <string name="replace_image" msgid="3171240952601443619">"Sustituir imagen"</string>
     <string name="duration_sec" msgid="6617032324007824096">"Duración (<xliff:g id="DURATION">%s</xliff:g> segundos)"</string>
-    <string name="duration_selector_title" msgid="5981097971537625852">"Duración de la diapositiva "</string>
-    <string name="layout_selector_title" msgid="7344600117972450771">"Diseño de presentación "</string>
+    <string name="duration_selector_title" msgid="5981097971537625852">"Duración de la diapositiva\u0020"</string>
+    <string name="layout_selector_title" msgid="7344600117972450771">"Diseño de presentación\u0020"</string>
     <string name="layout_top" msgid="6811021650398972346">"Diseño (arriba)"</string>
     <string name="layout_bottom" msgid="5822765871095491843">"Diseño (abajo)"</string>
     <string name="type_to_compose_text_or_leave_blank" msgid="7769792471457574059">"Escribir mensaje o dejar en blanco"</string>
@@ -200,27 +199,27 @@
     <string name="delete" msgid="1409973060081564612">"Eliminar"</string>
     <string name="select_conversations" msgid="7816517565640002844">"Seleccionar conversaciones"</string>
     <string name="no_conversations" msgid="6773767655149258445">"No hay conversaciones."</string>
-    <string name="loading_conversations" msgid="5510430408235967094">"Cargando conversaciones..."</string>
+    <string name="loading_conversations" msgid="5510430408235967094">"Cargando conversaciones\u2026"</string>
     <string name="cannot_get_details" msgid="850292987983026806">"No se puede obtener información detallada."</string>
     <string name="message_details_title" msgid="9223295113731634528">"Detalles del mensaje"</string>
-    <string name="message_type_label" msgid="7975373966795945566">"Tipo: "</string>
+    <string name="message_type_label" msgid="7975373966795945566">"Tipo:\u0020"</string>
     <string name="text_message" msgid="8196464345251877972">"Mensaje de texto"</string>
     <string name="multimedia_message" msgid="1512644521083533071">"Mensaje multimedia"</string>
     <string name="multimedia_notification" msgid="4124031788554972308">"Notificación de mensaje multimedia"</string>
-    <string name="from_label" msgid="2055117571548171397">"De: "</string>
-    <string name="to_address_label" msgid="5837363600471845801">"Para: "</string>
-    <string name="bcc_label" msgid="530867161453958774">"CCO: "</string>
-    <string name="sent_label" msgid="2722190650145251584">"Enviado: "</string>
-    <string name="received_label" msgid="8618029024731693906">"Recibido: "</string>
-    <string name="saved_label" msgid="4183160415593488207">"Guardado "</string>
-    <string name="subject_label" msgid="8721241914144101631">"Asunto: "</string>
-    <string name="message_size_label" msgid="4698016210013319786">"Tamaño del mensaje: "</string>
-    <string name="priority_label" msgid="7397600367853359607">"Prioridad: "</string>
+    <string name="from_label" msgid="2055117571548171397">"De:\u0020"</string>
+    <string name="to_address_label" msgid="5837363600471845801">"Para:\u0020"</string>
+    <string name="bcc_label" msgid="530867161453958774">"CCO:\u0020"</string>
+    <string name="sent_label" msgid="2722190650145251584">"Enviado:\u0020"</string>
+    <string name="received_label" msgid="8618029024731693906">"Recibido:\u0020"</string>
+    <string name="saved_label" msgid="4183160415593488207">"Guardado\u0020"</string>
+    <string name="subject_label" msgid="8721241914144101631">"Asunto:\u0020"</string>
+    <string name="message_size_label" msgid="4698016210013319786">"Tamaño del mensaje:\u0020"</string>
+    <string name="priority_label" msgid="7397600367853359607">"Prioridad:\u0020"</string>
     <string name="priority_high" msgid="5627897207952009214">"Alta"</string>
     <string name="priority_normal" msgid="5715227727384683550">"Normal"</string>
     <string name="priority_low" msgid="8928782666023373987">"Baja"</string>
-    <string name="message_class_label" msgid="5115748690481550562">"Clase de mensaje: "</string>
-    <string name="error_code_label" msgid="5810068247647058769">"Código de error: "</string>
+    <string name="message_class_label" msgid="5115748690481550562">"Clase de mensaje:\u0020"</string>
+    <string name="error_code_label" msgid="5810068247647058769">"Código de error:\u0020"</string>
     <string name="menu_edit" msgid="3056513240155967777">"Editar"</string>
     <string name="menu_delete_messages" msgid="2610286783513247420">"Eliminar mensajes"</string>
     <string name="menu_lock" msgid="7603793126077557472">"Bloquear"</string>
@@ -239,9 +238,9 @@
     <string name="status_failed" msgid="1998776666856593544">"Con error"</string>
     <string name="status_unread" msgid="8555305495998700198">"No leídos"</string>
     <string name="status_rejected" msgid="2613641949065942678">"Rechazados:"</string>
-    <string name="recipient_label" msgid="3922667485312634446">"Destinatario: "</string>
-    <string name="status_label" msgid="7283375460919181660">"Estado: "</string>
-    <string name="delivered_label" msgid="3514011729156932928">"Enviado: "</string>
+    <string name="recipient_label" msgid="3922667485312634446">"Destinatario:\u0020"</string>
+    <string name="status_label" msgid="7283375460919181660">"Estado:\u0020"</string>
+    <string name="delivered_label" msgid="3514011729156932928">"Enviado:\u0020"</string>
     <string name="attach_image" msgid="6439985727687107742">"Imagen"</string>
     <string name="attach_take_photo" msgid="4280601313184373837">"Capturar imagen"</string>
     <string name="attach_video" msgid="4264272693501538294">"Vídeos"</string>
@@ -286,6 +285,7 @@
     <string name="saved_ringtone" msgid="3847363932276708626">"Tono guardado"</string>
     <string name="saved_ringtone_fail" msgid="4778500070919251116">"No se ha podido guardar el tono."</string>
     <string name="menu_insert_smiley" msgid="4964504393061025071">"Insertar emoticono"</string>
+    <string name="menu_insert_emoji">Insertar Emoji</string>
     <string name="select_link_title" msgid="3371818607625768447">"Seleccionar acción"</string>
     <string name="slide_number" msgid="1923958526266726635">"Diapositiva <xliff:g id="NUMBER">%s</xliff:g>"</string>
   <plurals name="slide_duration">
@@ -320,18 +320,20 @@
     <string name="storage_limits_setting" msgid="4952781049308537373">"Establecer límites"</string>
     <string name="storage_limits_setting_dismiss" msgid="1433841310158458034">"Sin límites"</string>
     <string name="too_many_unsent_mms" msgid="4436493698891224126">"En este momento no se puede enviar el mensaje porque hay demasiados mensajes multimedia sin enviar."</string>
-    <string name="sending_message" msgid="2054406576361149715">"ENVIANDO…"</string>
+    <string name="sending_message" msgid="2054406576361149715">"ENVIANDO\u2026"</string>
     <string name="pick_too_many_recipients" msgid="650087588867628044">"Demasiados destinatarios"</string>
-    <string name="adding_recipients" msgid="2962810172527532357">"Añadiendo destinatarios…"</string>
-    <string name="draft_separator" msgid="5402575086540243019">", "</string>
-    <string name="message_count_format" msgid="4434763220590778012">" <xliff:g id="NUMBER">%1$s</xliff:g>"</string>
+    <string name="adding_recipients" msgid="2962810172527532357">"Añadiendo destinatarios\u2026"</string>
+    <string name="draft_separator" msgid="5402575086540243019">",\u0020"</string>
+    <string name="message_count_format" msgid="4434763220590778012">"\u00a0<xliff:g id="NUMBER">%1$s</xliff:g>"</string>
     <string name="message_count_notification" msgid="3629968600032690007">"<xliff:g id="NUMBER">%1$s</xliff:g> mensajes nuevos"</string>
-  <plurals name="message_count_notification_overflow">
-    <item quantity="one" msgid="3340591167508150806">"Otro mensaje (<xliff:g id="NUMBER">%1$s</xliff:g>)"</item>
-    <item quantity="other" msgid="1393002799298501480">"Otros <xliff:g id="NUMBER">%1$s</xliff:g> mensajes"</item>
-  </plurals>
+    <plurals name="message_count_notification_overflow">
+        <item quantity="one" msgid="3340591167508150806">"Otro mensaje (<xliff:g id="NUMBER">%1$s</xliff:g>)"</item>
+        <item quantity="other" msgid="1393002799298501480">"Otros <xliff:g id="NUMBER">%1$s</xliff:g> mensajes"</item>
+    </plurals>
     <string name="error_state" msgid="5177386717626893507">"Estado inconsistente"</string>
     <string name="error_state_text" msgid="7918866106335387710">"El estado de las conversaciones y los destinatarios no es correcto. Escribe un informe de error y envíalo a través de http://go/droidanizer."</string>
+    <string name="label_mms_push">Enviar MMS pendientes</string>
+    <string name="desc_mms_push">Enviar mensajes MMS pendientes en la bandeja de salida a la red</string>
   <plurals name="recipient_count">
     <item quantity="other" msgid="7338580381574463136">"<xliff:g id="NUMBER">%1$s</xliff:g> personas"</item>
   </plurals>
