--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -32,7 +32,6 @@
     <string name="menu_delete_all" msgid="808729454898114735">"Izbriši sve niti"</string>
     <string name="menu_delete" msgid="1851666911396479006">"Izbriši nit"</string>
     <string name="menu_view" msgid="7448852683948080108">"Prikaži nit"</string>
-    <string name="menu_debug_dump" msgid="6855869130206549643">"UKLANJANJE BUGOVA IZ GLAVNE MEMORIJE"</string>
     <string name="refreshing" msgid="987335057871404222">"Osvježavanje..."</string>
     <string name="menu_cell_broadcasts" msgid="5646161375983084660">"Poruke mobilne mreže"</string>
     <string name="has_draft" msgid="2487465595514636160">"Skica"</string>
@@ -286,6 +285,7 @@
     <string name="saved_ringtone" msgid="3847363932276708626">"Melodija zvona spremljena je"</string>
     <string name="saved_ringtone_fail" msgid="4778500070919251116">"Melodiju zvona nije moguće spremiti."</string>
     <string name="menu_insert_smiley" msgid="4964504393061025071">"Umetni smajlić"</string>
+    <string name="menu_insert_emoji">Umetni emoji</string>
     <string name="select_link_title" msgid="3371818607625768447">"Odabir radnje"</string>
     <string name="slide_number" msgid="1923958526266726635">"Slajd <xliff:g id="NUMBER">%s</xliff:g>"</string>
   <plurals name="slide_duration">
