--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -32,7 +32,6 @@
     <string name="menu_delete_all" msgid="808729454898114735">"Összes beszélgetés törlése"</string>
     <string name="menu_delete" msgid="1851666911396479006">"Szál törlése"</string>
     <string name="menu_view" msgid="7448852683948080108">"Szál megtekintése"</string>
-    <string name="menu_debug_dump" msgid="6855869130206549643">"DEBUG DUMP"</string>
     <string name="refreshing" msgid="987335057871404222">"Frissítés..."</string>
     <string name="menu_cell_broadcasts" msgid="5646161375983084660">"Cellán belüli adások"</string>
     <string name="has_draft" msgid="2487465595514636160">"Piszkozat"</string>
@@ -286,6 +285,7 @@
     <string name="saved_ringtone" msgid="3847363932276708626">"A csengőhang mentve."</string>
     <string name="saved_ringtone_fail" msgid="4778500070919251116">"Nem sikerült menteni a csengőhangot."</string>
     <string name="menu_insert_smiley" msgid="4964504393061025071">"Hangulatjel beszúrása"</string>
+    <string name="menu_insert_emoji">Ikon beszúrása</string>
     <string name="select_link_title" msgid="3371818607625768447">"Művelet kiválasztása"</string>
     <string name="slide_number" msgid="1923958526266726635">"<xliff:g id="NUMBER">%s</xliff:g>. dia"</string>
   <plurals name="slide_duration">
@@ -385,6 +385,14 @@
 
     <!-- Extra Settings: -->
     <string name="pref_extra_settings">Extra beállítások</string>
+
+    <!-- Strip unicode -->
+    <string name="pref_title_strip_unicode">Unicode levágása</string>
+    <string name="pref_summary_strip_unicode">Nem támogatott karakterek levágása az SMS üzenetből</string>
+
+    <!-- Enable emojis -->
+    <string name="pref_title_enable_emojis">Ikonok engedélyezése</string>
+    <string name="pref_summary_enable_emojis">Ikonok megjelenítéséhez szükséges unicode támogatás engedélyezése</string>
 
     <!-- Full timestamps -->
     <string name="pref_title_mms_full_timestamp">Teljes időbélyeg</string>
