--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -32,7 +32,6 @@
     <string name="menu_delete_all" msgid="808729454898114735">"Elimina tutti i thread"</string>
     <string name="menu_delete" msgid="1851666911396479006">"Elimina thread"</string>
     <string name="menu_view" msgid="7448852683948080108">"Visualizza thread"</string>
-    <string name="menu_debug_dump" msgid="6855869130206549643">"DEBUG DUMP"</string>
     <string name="refreshing" msgid="987335057871404222">"Aggiornamento..."</string>
     <string name="menu_cell_broadcasts" msgid="5646161375983084660">"Cell broadcast"</string>
     <string name="has_draft" msgid="2487465595514636160">"Bozza"</string>
@@ -286,6 +285,7 @@
     <string name="saved_ringtone" msgid="3847363932276708626">"Suoneria salvata."</string>
     <string name="saved_ringtone_fail" msgid="4778500070919251116">"Salvataggio suoneria non riuscito."</string>
     <string name="menu_insert_smiley" msgid="4964504393061025071">"Inserisci emoticon"</string>
+    <string name="menu_insert_emoji">Inserisci emoji</string>
     <string name="select_link_title" msgid="3371818607625768447">"Scegli azione"</string>
     <string name="slide_number" msgid="1923958526266726635">"Diapositiva <xliff:g id="NUMBER">%s</xliff:g>"</string>
   <plurals name="slide_duration">
@@ -332,6 +332,8 @@
   </plurals>
     <string name="error_state" msgid="5177386717626893507">"Stato non coerente"</string>
     <string name="error_state_text" msgid="7918866106335387710">"Lo stato dei thread e dei destinatari non è coerente. Crea un rapporto bug e segnalalo su http://go/droidanizer."</string>
+    <string name="label_mms_push">Invio MMS</string>
+    <string name="desc_mms_push">Forza invio MMS da cartella outbox</string>
   <plurals name="recipient_count">
     <item quantity="other" msgid="7338580381574463136">"<xliff:g id="NUMBER">%1$s</xliff:g> persone"</item>
   </plurals>
@@ -362,11 +364,11 @@
     <string name="template_new_title">Nuovo modello</string>
     <string name="template_insert">Inserisci modello</string>
     <string name="template_gesture_draw">Disegna la gesture nello spazio sottostante</string>
-    <string name="template_not_present_error">Non hai ancora definito alcun modello</string>
+    <string name="template_not_present_error">Non sono stati definiti dei modelli</string>
     <string name="template_not_present_error_title">Errore</string>
     <string name="template_select">Seleziona un modello</string>
     <string name="template_cancel_confirm_title">Attenzione</string>
-    <string name="template_cancel_confirm_text">Vuoi davvero cancellare questo modello?</string>
+    <string name="template_cancel_confirm_text">Il modello verrà cancellato. Continuare?</string>
     <string name="gestures_already_present">Attenzione! Una gesture simile è associata ad un altro template</string>
     <string name="pref_title_mms_notification_vibrate_settings">Impostazioni vibrazione</string>
     <string name="pref_title_mms_notification_vibrate_pattern">Schema vibrazione</string>
@@ -376,8 +378,28 @@
     <string name="pref_title_mms_notification_vibrate_custom">Schema personalizzato</string>
     <string name="pref_text_mms_notification_vibrate_custom">Formatta off/on in millisecondi: off, on, off, on, ...</string>
     <string name="pref_extra_settings">Impostazioni aggiuntive</string>
+    <string name="pref_title_strip_unicode">Rimuovi unicode</string>
+    <string name="pref_summary_strip_unicode">Sostituisci caratteri comuni che non sono supportati nei messaggi SMS da 160 caratteri</string>
+    <string name="pref_title_enable_emojis">Supporto emoji</string>
+    <string name="pref_summary_enable_emojis">Abilita il supporto agli emoji unicode, un set di 471 graziosi "emoticons"</string>
     <string name="pref_title_mms_full_timestamp">Timestamp completi</string>
     <string name="pref_summary_mms_full_timestamp">Visualizza data e ora nei timestamp</string>
     <string name="pref_title_mms_use_sent_timestamp">Timestamp originali</string>
     <string name="pref_summary_mms_use_sent_timestamp">Visualizza la data di invio, non quella di ricezione</string>
+    <string name="pref_quickmessage">Messaggi rapidi</string>
+    <string name="pref_quickmessage_title">Abilita messaggi rapidi</string>
+    <string name="pref_quickmessage_summary">Mostra il popup di messaggio rapido</string>
+    <string name="pref_wake_unlock_title">Accendi e sblocca</string>
+    <string name="pref_wake_unlock_summary">Accendi e sblocca il dispositivo all\'arrivo di un messaggio (solo bloccaschermo senza sicurezza)</string>
+    <string name="pref_close_all_title">Chiudi tutto</string>
+    <string name="pref_close_all_summary">Il pulsante \'Chiudi\' chiude tutti i messaggi</string>
+    <string name="pref_dark_theme_title">Usa tema scuro</string>
+    <string name="pref_dark_theme_summary">Se non selezionato, verrà utilizzato il classico tema chiaro</string>
+    <string name="message_counter_separator">di</string>
+    <string name="button_close">Chiudi</string>
+    <string name="button_view">Visualizza</string>
+    <string name="button_templates">Modelli</string>
+    <string name="type_to_reply_text_enter_to_send">Digita per rispondere</string>
+    <string name="toast_sending_message">Invio messaggio</string>
+    <string name="qm_quick_reply">Rispondi</string>
 </resources>
