--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -29,7 +29,6 @@
     <string name="menu_delete_all" msgid="808729454898114735">"Alle conversaties verwijderen"</string>
     <string name="menu_delete" msgid="1851666911396479006">"Conversatie verwijderen"</string>
     <string name="menu_view" msgid="7448852683948080108">"Conversatie tonen"</string>
-    <string name="menu_debug_dump" msgid="6855869130206549643">"DEBUG-DUMP"</string>
     <string name="refreshing" msgid="987335057871404222">"Vernieuwen\u2026"</string>
     <string name="menu_cell_broadcasts" msgid="5646161375983084660">"Cell broadcasts"</string>
     <string name="has_draft" msgid="2487465595514636160">"Concept"</string>
@@ -335,15 +334,21 @@
     <string name="pref_wake_unlock_summary">Bij inkomend bericht apparaat ontwaken en ontgrendelen (onbeveiligd vergrendelscherm vereist)</string>
     <string name="pref_close_all_title">Alles sluiten</string>
     <string name="pref_close_all_summary">Sluiten-knop sluit alle berichten</string>
+    <string name="pref_dark_theme_title">Donker thema</string>
+    <string name="pref_dark_theme_summary">Donkere i.p.v. lichte kleuren gebruiken</string>
     <string name="message_counter_separator">van</string>
 
     <!-- QM Dialog box buttons -->
     <string name="button_close">Sluiten</string>
     <string name="button_view">Tonen</string>
+    <string name="button_templates">Sjablonen</string>
 
     <!-- Hint text in message body field when keyboard is exposed -->
     <string name="type_to_reply_text_enter_to_send">Typ om te beantwoorden</string>
 
     <!-- QM Toast -->
-    <string name="toast_sending_message">VERZENDEN\u2026</string>
+    <string name="toast_sending_message">Bericht wordt verzonden\u2026</string>
+
+    <!-- QM - Quick reply -->
+    <string name="qm_quick_reply">Snel beantwoorden</string>
 </resources>
