--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -32,7 +32,6 @@
     <string name="menu_delete_all" msgid="808729454898114735">"Usuń wszystkie wątki"</string>
     <string name="menu_delete" msgid="1851666911396479006">"Usuń wątek"</string>
     <string name="menu_view" msgid="7448852683948080108">"Wyświetl wątek"</string>
-    <string name="menu_debug_dump" msgid="6855869130206549643">"ZRZUT DEBUGOWANIA"</string>
     <string name="refreshing" msgid="987335057871404222">"Odświeżanie..."</string>
     <string name="menu_cell_broadcasts" msgid="5646161375983084660">"Transmisje komórkowe"</string>
     <string name="has_draft" msgid="2487465595514636160">"Wersja robocza"</string>
@@ -286,6 +285,7 @@
     <string name="saved_ringtone" msgid="3847363932276708626">"Dzwonek został zapisany."</string>
     <string name="saved_ringtone_fail" msgid="4778500070919251116">"Nie można zapisać dzwonka."</string>
     <string name="menu_insert_smiley" msgid="4964504393061025071">"Wstaw emotikon"</string>
+    <string name="menu_insert_emoji">Wstaw emoji</string>
     <string name="select_link_title" msgid="3371818607625768447">"Wybierz czynność"</string>
     <string name="slide_number" msgid="1923958526266726635">"Slajd nr <xliff:g id="NUMBER">%s</xliff:g>"</string>
   <plurals name="slide_duration">
