--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -32,7 +32,6 @@
     <string name="menu_delete_all" msgid="808729454898114735">"Удалить все цепочки"</string>
     <string name="menu_delete" msgid="1851666911396479006">"Удалить цепочку"</string>
     <string name="menu_view" msgid="7448852683948080108">"Просмотреть цепочку"</string>
-    <string name="menu_debug_dump" msgid="6855869130206549643">"ОТЛАДКА ДАМПА"</string>
     <string name="refreshing" msgid="987335057871404222">"Обновление..."</string>
     <string name="menu_cell_broadcasts" msgid="5646161375983084660">"Широковещательная передача сообщений"</string>
     <string name="has_draft" msgid="2487465595514636160">"Черновик"</string>
@@ -286,6 +285,7 @@
     <string name="saved_ringtone" msgid="3847363932276708626">"Рингтон сохранен."</string>
     <string name="saved_ringtone_fail" msgid="4778500070919251116">"Рингтон не сохранен."</string>
     <string name="menu_insert_smiley" msgid="4964504393061025071">"Вставить смайлик"</string>
+    <string name="menu_insert_emoji">Вставить emoji</string>
     <string name="select_link_title" msgid="3371818607625768447">"Выбор действия"</string>
     <string name="slide_number" msgid="1923958526266726635">"Слайд <xliff:g id="NUMBER">%s</xliff:g>"</string>
   <plurals name="slide_duration">
@@ -332,6 +332,8 @@
   </plurals>
     <string name="error_state" msgid="5177386717626893507">"Данные были изменены"</string>
     <string name="error_state_text" msgid="7918866106335387710">"Цепочки не соответствуют получателям. Сделайте снимок экрана и отправьте сообщение об ошибке через веб-сайт http://go/droidanizer"</string>
+    <string name="label_mms_push">Передача MMS</string>
+    <string name="desc_mms_push">Передавать MMS из исходящих в сеть</string>
   <plurals name="recipient_count">
     <item quantity="other" msgid="7338580381574463136">"<xliff:g id="NUMBER">%1$s</xliff:g> чел."</item>
   </plurals>
@@ -384,10 +386,43 @@
     <!-- Extra Settings: -->
     <string name="pref_extra_settings">Дополнительные настройки</string>
 
+    <!-- Strip unicode -->
+    <string name="pref_title_strip_unicode">Раскрывать юникод</string>
+    <string name="pref_summary_strip_unicode">Замена не поддерживаемых символов в сообщении обычными</string>
+    <!-- Enable emojis -->
+    <string name="pref_title_enable_emojis">Включить emojis</string>
+    <string name="pref_summary_enable_emojis">Включить поддержку emojis, набора из 471 отличных юникод смайликов</string>
+
     <!-- Full timestamps -->
     <string name="pref_title_mms_full_timestamp">Полная метка времени</string>
     <string name="pref_summary_mms_full_timestamp">Включение отображения полной даты и времени в сообщениях</string>
     <!-- Which timestamps -->
     <string name="pref_title_mms_use_sent_timestamp">Исходная метка времени</string>
     <string name="pref_summary_mms_use_sent_timestamp">Отображение и сохранение даты отправки, а не даты приёма</string>
+
+    <!-- QUICKMESSAGE SUPPORT -->
+    <!-- Preferences -->
+    <string name="pref_quickmessage">Быстрый ответ</string>
+    <string name="pref_quickmessage_title">Включить быстрый ответ</string>
+    <string name="pref_quickmessage_summary">Показывать всплывающее окно для быстрого ответа</string>
+    <string name="pref_wake_unlock_title">Пробуждение и разблокировка</string>
+    <string name="pref_wake_unlock_summary">Пробуждать и разблокировать устройство при входящем сообщении (только для небезопасной блокировки экрана)</string>
+    <string name="pref_close_all_title">Закрыть всё</string>
+    <string name="pref_close_all_summary">Кнопка \"Закрыть\" закрывает все сообщения</string>
+    <string name="pref_dark_theme_title">Тёмная тема</string>
+    <string name="pref_dark_theme_summary">Если не выбрано, будет использована светлая тема</string>
+    <string name="message_counter_separator">из</string>
+
+    <!-- QM Dialog box buttons -->
+    <string name="button_close">Закрыть</string>
+    <string name="button_view">Посмотреть</string>
+
+    <!-- Hint text in message body field when keyboard is exposed -->
+    <string name="type_to_reply_text_enter_to_send">Начните писать чтобы ответить</string>
+
+    <!-- QM Toast -->
+    <string name="toast_sending_message">Отправка сообщения</string>
+
+    <!-- QM - Quick reply -->
+    <string name="qm_quick_reply">Быстрый ответ</string>
 </resources>
