--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -32,7 +32,6 @@
     <string name="menu_delete_all" msgid="808729454898114735">"删除所有会话"</string>
     <string name="menu_delete" msgid="1851666911396479006">"删除会话"</string>
     <string name="menu_view" msgid="7448852683948080108">"查看会话"</string>
-    <string name="menu_debug_dump" msgid="6855869130206549643">"DEBUG DUMP"</string>
     <string name="refreshing" msgid="987335057871404222">"正在刷新..."</string>
     <string name="menu_cell_broadcasts" msgid="5646161375983084660">"小区广播"</string>
     <string name="has_draft" msgid="2487465595514636160">"草稿"</string>
@@ -286,6 +285,7 @@
     <string name="saved_ringtone" msgid="3847363932276708626">"已保存铃声。"</string>
     <string name="saved_ringtone_fail" msgid="4778500070919251116">"无法保存铃声。"</string>
     <string name="menu_insert_smiley" msgid="4964504393061025071">"插入表情符号"</string>
+    <string name="menu_insert_emoji">插入绘文字</string>
     <string name="select_link_title" msgid="3371818607625768447">"选择操作"</string>
     <string name="slide_number" msgid="1923958526266726635">"幻灯片 <xliff:g id="NUMBER">%s</xliff:g>"</string>
   <plurals name="slide_duration">
