--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -177,6 +177,7 @@
     <string name="pref_summary_notification_vibrateWhen" msgid="669655090822561447">"Bei Benachrichtigung vibrieren"</string>
     <string name="pref_title_notification_ringtone" msgid="5467265237106229952">"Klingelton auswählen"</string>
     <string name="pref_messages_to_save" msgid="3202539743892934926">"Anzahl der zu speichernden Nachrichten festlegen"</string>
+
   <string-array name="prefEntries_vibrateWhen">
     <item msgid="2520871831815631409">"Immer"</item>
     <item msgid="6069709696037750627">"Nur im Lautlos-Modus"</item>
@@ -349,4 +350,100 @@
     <string name="notification_separator" msgid="2334673105226536422">"  "</string>
     <string name="enumeration_comma" msgid="213598026698964628">", "</string>
     <string name="message_timestamp_format" msgid="4188999027493614617">"<xliff:g id="STRING_0">%1$s</xliff:g> - <xliff:g id="STRING_1">%2$s</xliff:g>"</string>
+
+    <!-- additional CyanogenMod features -->
+
+    <!-- Settings item for boolean option for SMS Split Counter -->
+    <string name="pref_title_sms_split_counter">Zähler für Aufteilung</string>
+    <!-- Settings item description for boolean SMS Split 160 characters setting -->
+    <string name="pref_summary_sms_split_counter">Der Nachricht einen Zähler anhängen, z.B. (1/2)</string>
+
+    <!-- Sms templates -->
+    <string name="prefs_templates_settings">SMS-Vorlagen</string>
+    <string name="pref_title_templates_manage">Vorlagen</string>
+    <string name="pref_summary_templates_manage">SMS-Vorlagen verwalten</string>
+    <string name="pref_title_templates_show_gesture">Gesten</string>
+    <string name="pref_summary_templates_show_gesture">Spur anzeigen</string>
+    <string name="pref_title_template_gestures_sensitivity">Empfindlichkeit der Gesten</string>
+    <string name="template_save">Speichern</string>
+    <string name="template_insert_hint">Vorlagentext hier eingeben</string>
+    <string name="template_empty_text">Das Textfeld darf nicht leer sein</string>
+    <string name="template_explanation">Vorlagentext eingeben oder ändern. Optional kann eine Geste gezeichnet und mit der Vorlage verknüpft werden.</string>
+    <string name="template_edit">Bearbeiten</string>
+    <string name="template_delete">Löschen</string>
+    <string name="template_ctx_menu_title">Aktionen</string>
+    <string name="template_list_title">Vorlagen</string>
+    <string name="template_new_title">Neue Vorlage</string>
+    <string name="template_insert">Vorlage einfügen</string>
+    <string name="template_gesture_draw">Geste auf der freien Fläche unterhalb zeichnen</string>
+    <string name="template_not_present_error">Es wurden bisher keine Vorlagen angelegt</string>
+    <string name="template_not_present_error_title">Fehler</string>
+    <string name="template_select">Vorlage auswählen</string>
+    <string name="template_cancel_confirm_title">Warnung</string>
+    <string name="template_cancel_confirm_text">Die Vorlage wird gelöscht. Fortsetzen?</string>
+    <string name="gestures_already_present">Warnung: Eine ähnliche Geste wurde bereits mit einer anderen Vorlage verknüpft!</string>
+
+    <!-- Change Vibrate pattern/method for message notification -->
+    <string name="pref_title_mms_notification_vibrate_settings">Vibrationseinstellungen</string>
+    <string name="pref_title_mms_notification_vibrate_pattern">Vibrationsmuster</string>
+    <string name="pref_summary_mms_notification_vibrate_pattern">Vibrationsmuster ändern</string>
+    <string name="pref_title_mms_notification_vibrate_call">Vibrieren bei Anruf</string>
+    <string name="pref_summary_mms_notification_vibrate_call">Vibrieren während eines Anrufs erlauben</string>
+    <string name="pref_title_mms_notification_vibrate_custom">Anderes Vibrationsmuster</string>
+    <string name="pref_text_mms_notification_vibrate_custom">Format aus/an in Millisekunden: aus, an, aus, an, ...</string>
+
+    <!-- Extra Settings: -->
+    <string name="pref_extra_settings">Weitere Einstellungen</string>
+
+    <!-- Strip unicode -->
+    <string name="pref_title_strip_unicode">Unicode entfernen</string>
+    <string name="pref_summary_strip_unicode">Zeichen ersetzen, die in SMS-Nachrichten nicht unterstützt werden</string>
+
+    <!-- Enable emojis -->
+    <string name="menu_insert_emoji">Emojis einfügen</string>
+    <string name="pref_title_enable_emojis">Emoji-Unterstützung</string>
+    <string name="pref_summary_enable_emojis">Unterstützung für Emojis aktivieren</string>
+
+        <!-- Full timestamps -->
+    <string name="pref_title_mms_full_timestamp">Volle Datumsangabe</string>
+    <string name="pref_summary_mms_full_timestamp">Datum und Zeit der Nachricht anzeigen</string>
+    <!-- Which timestamps -->
+    <string name="pref_title_mms_use_sent_timestamp">Originale Datumsangabe</string>
+    <string name="pref_summary_mms_use_sent_timestamp">Statt Empfangszeitpunkt den Sendezeitpunkt der Nachricht anzeigen und speichern</string>
+
+    <!-- Settings item for the soft keyboard picker -->
+    <string name="pref_title_input_type">Bildschirmtastatur</string>
+    <string name="pref_summary_input_type">Bildschirmtastatur zur Eingabe von Nachrichten auswählen</string>
+
+    <!-- Soft Keyboard Type -->
+    <string name="pref_keyboard_emoji">Emoticon-Taste anzeigen</string>
+    <string name="pref_keyboard_new_line">Eingabetaste anzeigen</string>
+    <string name="pref_keyboard_unknown">Unbekannt. Neue Auswahl treffen</string>
+
+    <!-- QUICKMESSAGE SUPPORT -->
+    <!-- Preferences -->
+    <string name="pref_quickmessage">Schnellnachricht und Antwort</string>
+    <string name="pref_quickmessage_title">Schnellnachrichten anzeigen</string>
+    <string name="pref_quickmessage_summary">Das Schnellnachricht-Pop-up bei Eingang von SMS anzeigen</string>
+    <string name="pref_wake_unlock_title">Wecken und Entsperren</string>
+    <string name="pref_wake_unlock_summary">Gerät bei Nachrichteneingang wecken und entsperren. (Nicht bei Sicherheits-Sperrbildschirmen möglich)</string>
+    <string name="pref_close_all_title">Alle schließen</string>
+    <string name="pref_close_all_summary">Die Schließen-Taste schließt alle Nachrichten</string>
+    <string name="pref_dark_theme_title">Dunkles Design verwenden</string>
+    <string name="pref_dark_theme_summary">Das \"helle\" Design wird als Standard verwendet, wenn Option nicht aktiviert wurde.</string>
+    <string name="message_counter_separator">von</string>
+
+    <!-- QM Dialog box buttons -->
+    <string name="button_close">Schließen</string>
+    <string name="button_view">Anzeigen</string>
+    <string name="button_templates">Vorlagen</string>
+
+    <!-- Hint text in message body field when keyboard is exposed -->
+    <string name="type_to_reply_text_enter_to_send">Nachricht schreiben</string>
+
+    <!-- QM Toast -->
+    <string name="toast_sending_message">Nachricht senden...</string>
+
+    <!-- QM - Quick reply -->
+    <string name="qm_quick_reply">Schnellantwort</string>
 </resources>
