--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -346,7 +346,66 @@
     <string name="attachment_slideshow" msgid="5867689101881763318">"Presentación"</string>
     <string name="attachment_video" msgid="4252062022156694591">"Vídeo"</string>
     <string name="attachment_picture" msgid="3709286281567284296">"Imagen"</string>
-    <string name="notification_separator" msgid="2334673105226536422">"  "</string>
-    <string name="enumeration_comma" msgid="213598026698964628">", "</string>
+    <string name="notification_separator" msgid="2334673105226536422">"\u0020\u0020"</string>
+    <string name="enumeration_comma" msgid="213598026698964628">",\u0020"</string>
     <string name="message_timestamp_format" msgid="4188999027493614617">"<xliff:g id="STRING_0">%1$s</xliff:g> - <xliff:g id="STRING_1">%2$s</xliff:g>"</string>
+
+    <string name="menu_insert_emoji">Insertar Emoji</string>
+    <string name="pref_title_sms_split_counter">"Contador de división"</string>
+    <string name="pref_summary_sms_split_counter">"Añade un contador de división de mensajes. Ej. (1/2)"</string>
+    <string name="prefs_templates_settings">Plantillas SMS</string>
+    <string name="pref_title_templates_manage">Plantillas</string>
+    <string name="pref_summary_templates_manage">Administrar plantillas de SMS</string>
+    <string name="pref_title_templates_show_gesture">Gestos</string>
+    <string name="pref_summary_templates_show_gesture">Habilitar el uso de gestos para acceder a plantillas</string>
+    <string name="pref_title_template_gestures_sensitivity">Sensibilidad gestual</string>
+    <string name="template_save">Guardar</string>
+    <string name="template_insert_hint">Insertar la plantilla de texto aquí</string>
+    <string name="template_empty_text">El campo de texto no puede estar vacio</string>
+    <string name="template_explanation">Insertar o modificar el texto de la plantilla y, opcionalmente, dibujar un gesto para asociarlo</string>
+    <string name="template_edit">Editar</string>
+    <string name="template_delete">Borrar</string>
+    <string name="template_ctx_menu_title">Acciones</string>
+    <string name="template_list_title">Plantillas</string>
+    <string name="template_new_title">Nueva plantilla</string>
+    <string name="template_insert">Insertar plantilla</string>
+    <string name="template_gesture_draw">Dibujar el gesto en el espacio de abajo</string>
+    <string name="template_not_present_error">No ha definido ninguna plantilla</string>
+    <string name="template_not_present_error_title">Error</string>
+    <string name="template_select">Seleccionar una plantilla</string>
+    <string name="template_cancel_confirm_title">Aviso</string>
+    <string name="template_cancel_confirm_text">Se va a borrar la plantilla. ¿Continuar?</string>
+    <string name="gestures_already_present">Aviso: ¡Un gesto similar ya ha sido asociado a otra plantilla!</string>
+    <string name="pref_title_mms_notification_vibrate_settings">"Opciones de Vibración"</string>
+    <string name="pref_title_mms_notification_vibrate_pattern">"Patrón de vibración"</string>
+    <string name="pref_summary_mms_notification_vibrate_pattern">"Cambiar patrón de vibración"</string>
+    <string name="pref_title_mms_notification_vibrate_call">"Vibración durante llamadas"</string>
+    <string name="pref_summary_mms_notification_vibrate_call">"Permitir vibración durante una llamada"</string>
+    <string name="pref_title_mms_notification_vibrate_custom">"Patrón personalizado"</string>
+    <string name="pref_text_mms_notification_vibrate_custom">"Secuencia inactivo/activo en milisegundos: inactivo, activo, inactivo, activo,\u2026"</string>
+    <string name="pref_extra_settings">Ajustes adicionales</string>
+    <string name="pref_title_strip_unicode">"Limpiar Unicode"</string>
+    <string name="pref_summary_strip_unicode">"Sustituir los caracteres que no son compatibles en los mensajes SMS"</string>
+    <string name="pref_title_enable_emojis">"Habilitar Emoji"</string>
+    <string name="pref_summary_enable_emojis">"Habilitar soporte para Emoji Unicode, una colección de 471 simpáticos emoticonos"</string>
+    <string name="pref_title_mms_full_timestamp">"Marca de tiempo completa"</string>
+    <string name="pref_summary_mms_full_timestamp">"Mostrar fecha y hora en las marcas de tiempo"</string>
+    <string name="pref_title_mms_use_sent_timestamp">"Marca de tiempo original"</string>
+    <string name="pref_summary_mms_use_sent_timestamp">"Mostrar fecha de envío en lugar de la fecha de recepción en las marcas de tiempo"</string>
+    <string name="pref_quickmessage">Mensaje Rápido</string>
+    <string name="pref_quickmessage_title">Habilitar mensaje rápido</string>
+    <string name="pref_quickmessage_summary">Muestra el cuadro de diálogo para mensaje rápido</string>
+    <string name="pref_wake_unlock_title">Despertar y desbloquear</string>
+    <string name="pref_wake_unlock_summary">Despierta y desbloquea el dispositivo al recibir un mensaje (solamente con bloqueo de pantalla)</string>
+    <string name="pref_close_all_title">Cerrar todo</string>
+    <string name="pref_close_all_summary">Al pulsar Cerrar, se cerrarán todos los mensajes</string>
+    <string name="pref_dark_theme_title">Usar tema oscuro</string>
+    <string name="pref_dark_theme_summary">Si no está seleccionado, se utilizará el tema \'claro\'</string>
+    <string name="message_counter_separator">de</string>
+    <string name="button_close">Cerrar</string>
+    <string name="button_view">Ver</string>
+    <string name="button_templates">Plantillas</string>
+    <string name="type_to_reply_text_enter_to_send">Escribir mensaje</string>
+    <string name="toast_sending_message">Enviando mensaje\u2026</string>
+    <string name="qm_quick_reply">Responder</string>
 </resources>
