--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -3,6 +3,7 @@
 /*
  * Copyright (C) 2007-2008 Esmertec AG.
  * Copyright (C) 2007-2008 The Android Open Source Project
+ * QuickMessage: Copyright (C) 2012 The CyanogenMod Project (DvTonder)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -349,4 +350,73 @@
     <string name="notification_separator" msgid="2334673105226536422">"  "</string>
     <string name="enumeration_comma" msgid="213598026698964628">", "</string>
     <string name="message_timestamp_format" msgid="4188999027493614617">"<xliff:g id="STRING_0">%1$s</xliff:g> – <xliff:g id="STRING_1">%2$s</xliff:g>"</string>
+
+    <string name="pref_title_input_type">Option du clavier virtuel</string>
+    <string name="pref_summary_input_type">Selectionner le type de clavier virtuel à utiliser lors de la composition des messages</string>
+
+    <string name="pref_title_sms_split_counter">Compteur de séparation</string>
+    <string name="pref_summary_sms_split_counter">Ajouter un compteur au message ex: (1/2)</string>
+    <string name="prefs_templates_settings">Modèles SMS</string>
+    <string name="pref_title_templates_manage">Modèles</string>
+    <string name="pref_summary_templates_manage">Gérer vos modèles SMS</string>
+    <string name="pref_title_templates_show_gesture">Gestes</string>
+    <string name="pref_summary_templates_show_gesture">Afficher la trace du geste</string>
+    <string name="pref_title_template_gestures_sensitivity">Sensibilité du geste</string>
+    <string name="template_save">Enregistrer</string>
+    <string name="template_insert_hint">Insérer ici le modèle du texte</string>
+    <string name="template_empty_text">Le champ de texte ne peut être vide</string>
+    <string name="template_explanation">Insérer ou modifier un modèle de texte et associer optionnellement un geste</string>
+    <string name="template_edit">Modifier</string>
+    <string name="template_delete">Supprimer</string>
+    <string name="template_ctx_menu_title">Actions</string>
+    <string name="template_list_title">Modèles</string>
+    <string name="template_new_title">Nouveau modèle</string>
+    <string name="template_insert">Insérer un modèle</string>
+    <string name="template_gesture_draw">Dessiner le geste dans l\'espace ci-dessous</string>
+    <string name="template_not_present_error">Il n\'y a pas de modèles</string>
+    <string name="template_not_present_error_title">Erreur</string>
+    <string name="template_select">Séléctionner un modèle</string>
+    <string name="template_cancel_confirm_title">Attention</string>
+    <string name="template_cancel_confirm_text">Le modèle va être supprimer. Continuer?</string>
+    <string name="gestures_already_present">Attention: Un geste similaire est associé à un autre modèle!</string>
+    <string name="pref_title_mms_notification_vibrate_settings">Paramètres de vibration</string>
+    <string name="pref_title_mms_notification_vibrate_pattern">Style de vibration</string>
+    <string name="pref_summary_mms_notification_vibrate_pattern">Changer le style de vibration</string>
+    <string name="pref_title_mms_notification_vibrate_call">Vibration lors d\'un appel</string>
+    <string name="pref_summary_mms_notification_vibrate_call">Autoriser la vibration pendant un appel</string>
+    <string name="pref_title_mms_notification_vibrate_custom">Style de vibration personnalisé</string>
+    <string name="pref_text_mms_notification_vibrate_custom">Format off/on en millisecondes: off, on, off, on, ...</string>
+    <string name="pref_extra_settings">Paramètres supplémentaires</string>
+    <!-- Strip unicode -->
+    <string name="pref_title_strip_unicode">Conversion unicode</string>
+    <string name="pref_summary_strip_unicode">Remplace les caractères qui ne sont pas pris en charge dans les 160 caractères des messages SMS</string>
+    <!-- Enable emojis -->
+    <string name="pref_title_enable_emojis">Activer Emoji</string>
+    <string name="pref_summary_enable_emojis">Activer la reconnaissance des emojis, 471 beaux émoticônes</string>
+    <string name="menu_insert_emoji">Insérer des emojis</string>
+    <string name="pref_title_mms_full_timestamp">Date complète</string>
+    <string name="pref_summary_mms_full_timestamp">Afficher la date et l\'heure des messages</string>
+    <string name="pref_title_mms_use_sent_timestamp">Date originale</string>
+    <string name="pref_summary_mms_use_sent_timestamp">Afficher la date d\'envoi au lieu de la date de récéption</string>
+    <string name="pref_keyboard_emoji">Emoji</string>
+    <string name="pref_keyboard_new_line">Entrer pour aller à la ligne</string>
+    <!-- QuickMessage -->
+    <string name="pref_quickmessage">QuickMessage</string>
+    <string name="pref_quickmessage_title">Activer QuickMessage</string>
+    <string name="pref_quickmessage_summary">Afficher le pop-up QuickMessage</string>
+    <string name="pref_wake_unlock_title">Réveiller et déverrouiller</string>
+    <string name="pref_wake_unlock_summary">Réveiller et déverrouiller l\'appareil à l\'arrivée de messages (écran de verrouillage non sécurisé seulement)</string>
+    <string name="pref_close_all_title">Tout fermer</string>
+    <string name="pref_close_all_summary">Le bouton Fermer ferme tous les messages</string>
+    <string name="pref_dark_theme_title">Utiliser le thème noir</string>
+    <string name="pref_dark_theme_summary">Si non sélectionné, le thème \'clair\' sera utilisé par défaut</string>
+    <string name="message_counter_separator">de</string>
+    <string name="button_close">Fermer</string>
+    <string name="button_view">Afficher</string>
+    <string name="button_templates">Modèles</string>
+    <string name="type_to_reply_text_enter_to_send">Entrer pour répondre</string>
+    <string name="toast_sending_message">Envoi du message</string>
+    <string name="qm_quick_reply">Réponse rapide</string>
+    <!-- Calendar -->
+    <string name="menu_add_to_calendar">Ajouter au calendrier</string>
 </resources>
