--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -349,4 +349,100 @@
     <string name="notification_separator" msgid="2334673105226536422">"  "</string>
     <string name="enumeration_comma" msgid="213598026698964628">", "</string>
     <string name="message_timestamp_format" msgid="4188999027493614617">"<xliff:g id="STRING_0">%1$s</xliff:g> – <xliff:g id="STRING_1">%2$s</xliff:g>"</string>
+
+    <string name="pref_title_input_type">Enter billentyű</string>
+    <string name="pref_summary_input_type">Válassza ki az Enter billentyűhöz társított műveletet</string>
+    <string name="menu_insert_emoji">Ikon beszúrása</string>
+
+    <!-- Settings item for boolean option for SMS Split Counter -->
+    <string name="pref_title_sms_split_counter">Darabszám</string>
+    <!-- Settings item description for boolean SMS Split 160 characters setting -->
+    <string name="pref_summary_sms_split_counter">Számláló megjelenítése pl. (1/2)</string>
+
+    <!-- Sms templates -->
+    <string name="prefs_templates_settings">SMS Sablonok</string>
+    <string name="pref_title_templates_manage">Kézmozdulat</string>
+    <string name="pref_summary_templates_manage">SMS sablonok kezelése</string>
+    <string name="pref_title_templates_show_gesture">Kézmozdulat</string>
+    <string name="pref_summary_templates_show_gesture">Kézmozdulat útvonalának megjelenítése</string>
+    <string name="pref_title_template_gestures_sensitivity">Kézmozdulat érzékenysége</string>
+    <string name="template_save">Mentés</string>
+    <string name="template_insert_hint">Írja be a sablon szövegét</string>
+    <string name="template_empty_text">A mező nem lehet üres.</string>
+    <string name="template_explanation">Írja be, vagy módosítsa a sablon szövegét és opcionálisan társíthat hozzá kézmozdulatot is.</string>
+    <string name="template_edit">Szerkesztés</string>
+    <string name="template_delete">Törlés</string>
+    <string name="template_ctx_menu_title">Műveletek</string>
+    <string name="template_list_title">Sablonok</string>
+    <string name="template_new_title">Új sablon</string>
+    <string name="template_insert">Sablon beszúrása</string>
+    <string name="template_gesture_draw">Rajzolja le a társítani kívánt kézmozdulatot az alábbi felületre.</string>
+    <string name="template_not_present_error">Még nincs definiált sablon.</string>
+    <string name="template_not_present_error_title">Hiba</string>
+    <string name="template_select">Válasszon sablont</string>
+    <string name="template_cancel_confirm_title">Figyelem</string>
+    <string name="template_cancel_confirm_text">Biztosan törölni szeretné?</string>
+    <string name="gestures_already_present">Figyelem: Egy hasonló kézmozdulat már társítva van egy másik sablonhoz!</string>
+
+    <!-- Change Vibrate pattern/method for message notification -->
+    <string name="pref_title_mms_notification_vibrate_settings">Rezgés beállítások</string>
+    <string name="pref_title_mms_notification_vibrate_pattern">Rezgés típusa</string>
+    <string name="pref_summary_mms_notification_vibrate_pattern">Rezgés mintájának beállítása</string>
+    <string name="pref_title_mms_notification_vibrate_call">Rezgés hívás közben</string>
+    <string name="pref_summary_mms_notification_vibrate_call">Rezgés engedélyezése hívás közben</string>
+    <string name="pref_title_mms_notification_vibrate_custom">Egyedi rezgés minta</string>
+    <string name="pref_text_mms_notification_vibrate_custom">Formátum: ki/be milliszekundumban: ki, be, ki, be, ...</string>
+
+    <!-- Extra Settings: -->
+    <string name="pref_extra_settings">Extra beállítások</string>
+
+    <!-- Strip unicode -->
+    <string name="pref_title_strip_unicode">Unicode levágása</string>
+    <string name="pref_summary_strip_unicode">Nem támogatott karakterek levágása az SMS üzenetből</string>
+
+    <!-- Enable emojis -->
+    <string name="pref_title_enable_emojis">Ikonok engedélyezése</string>
+    <string name="pref_summary_enable_emojis">Ikonok megjelenítéséhez szükséges unicode támogatás engedélyezése</string>
+
+    <!-- Full timestamps -->
+    <string name="pref_title_mms_full_timestamp">Teljes időbélyeg</string>
+    <string name="pref_summary_mms_full_timestamp">Mindkét dátum/idő megjelenítése</string>
+    <!-- Which timestamps -->
+    <string name="pref_title_mms_use_sent_timestamp">Eredeti dátum</string>
+    <string name="pref_summary_mms_use_sent_timestamp">Küldés dátumának megjelenítése a fogadás dátuma helyett</string>
+
+    <!-- Soft Keyboard Type -->
+    <string name="pref_keyboard_emoji">Hangulatjel beszúrása</string>
+    <string name="pref_keyboard_new_line">Új sor beszúrása</string>
+    <string name="pref_keyboard_unknown">Ismeretlen, kérjük, válassza ki újra</string>
+
+    <!-- QUICKMESSAGE SUPPORT -->
+    <!-- Preferences -->
+    <string name="pref_quickmessage">Gyors üzenetek és válaszok</string>
+    <string name="pref_quickmessage_title">Gyors üzenetek engedélyezése</string>
+    <string name="pref_quickmessage_summary">Gyors üzenetek felugró ablak megjelenítése</string>
+    <string name="pref_wake_unlock_title">Felébresztés és feloldás</string>
+    <string name="pref_wake_unlock_summary">Készülék felébresztése és feloldása üzenet érkezésekor (csak nem biztosított képernyőzár esetén)</string>
+    <string name="pref_close_all_title">Összes bezárása</string>
+    <string name="pref_close_all_summary">A bezárás gomb az összes üzenetet zárja be</string>
+    <string name="pref_dark_theme_title">Sötét téma használata</string>
+    <string name="pref_dark_theme_summary">Ha nincs kiválasztva, az alapértelmezett \'világos\' téma lesz használva</string>
+    <string name="message_counter_separator">/</string>
+
+    <!-- QM Dialog box buttons -->
+    <string name="button_close">Bezárás</string>
+    <string name="button_view">Megtekintés</string>
+    <string name="button_templates">Sablonok</string>
+
+    <!-- Hint text in message body field when keyboard is exposed -->
+    <string name="type_to_reply_text_enter_to_send">Írja be az üzenetet</string>
+
+    <!-- QM Toast -->
+    <string name="toast_sending_message">Üzenet küldése</string>
+
+    <!-- QM - Quick reply -->
+    <string name="qm_quick_reply">Válasz</string>
+
+    <!-- Add menu for 'Add SMS to calendar remind' -->
+    <string name="menu_add_to_calendar">Hozzáadás a naptárhoz</string>
 </resources>
