--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -177,6 +177,8 @@
     <string name="pref_summary_notification_vibrateWhen" msgid="669655090822561447">"Wibracje również przy powiadomieniu"</string>
     <string name="pref_title_notification_ringtone" msgid="5467265237106229952">"Wybierz dzwonek"</string>
     <string name="pref_messages_to_save" msgid="3202539743892934926">"Ustaw liczbę zapisywanych wiadomości"</string>
+    <string name="pref_title_sms_split_counter">Wskaźnik podziału</string>
+    <string name="pref_summary_sms_split_counter">Dodaje wskaźnik do wiadomości np. (1/2)</string>
   <string-array name="prefEntries_vibrateWhen">
     <item msgid="2520871831815631409">"Zawsze"</item>
     <item msgid="6069709696037750627">"Tylko po wyciszeniu"</item>
@@ -349,4 +351,82 @@
     <string name="notification_separator" msgid="2334673105226536422">"  "</string>
     <string name="enumeration_comma" msgid="213598026698964628">", "</string>
     <string name="message_timestamp_format" msgid="4188999027493614617">"<xliff:g id="STRING_0">%1$s</xliff:g> – <xliff:g id="STRING_1">%2$s</xliff:g>"</string>
+
+    <!-- Sms templates -->
+    <string name="prefs_templates_settings">Szablony SMS</string>
+    <string name="pref_title_templates_manage">Szablony</string>
+    <string name="pref_summary_templates_manage">Zarządzaj swoimi szablonami SMS</string>
+    <string name="pref_title_templates_show_gesture">Gest</string>
+    <string name="pref_summary_templates_show_gesture">Pokaż ślad gestu</string>
+    <string name="pref_title_template_gestures_sensitivity">Czułość gestu</string>
+    <string name="template_save">Zapisz</string>
+    <string name="template_insert_hint">Tu wstaw tekst szablonu</string>
+    <string name="template_empty_text">Pole tekstowe nie może być puste</string>
+    <string name="template_explanation">Wstaw lub modyfikuj tekst szablonu i ewentualnie narysuj gest dla niego</string>
+    <string name="template_edit">Edytuj</string>
+    <string name="template_delete">Usuń</string>
+    <string name="template_ctx_menu_title">Akcje</string>
+    <string name="template_list_title">Szablony</string>
+    <string name="template_new_title">Nowy szablon</string>
+    <string name="template_insert">Wstaw szablon</string>
+    <string name="template_gesture_draw">Narysuj gest w polu poniżej</string>
+    <string name="template_not_present_error">Brak zdefiniowanych szablonów</string>
+    <string name="template_not_present_error_title">Błąd</string>
+    <string name="template_select">Wybierz szablon</string>
+    <string name="template_cancel_confirm_title">Ostrzeżenie</string>
+    <string name="template_cancel_confirm_text">Szablon zostanie usunięty</string>
+    <string name="gestures_already_present">Ostrzeżenie: Podobny gest jest już powiązany z innym szablonem!</string>
+
+    <!-- Change Vibrate pattern/method for message notification -->
+    <string name="pref_title_mms_notification_vibrate_settings">Ustawienia wibracji</string>
+    <string name="pref_title_mms_notification_vibrate_pattern">Wzór wibracji</string>
+    <string name="pref_summary_mms_notification_vibrate_pattern">Zmień wzór wibracji</string>
+    <string name="pref_title_mms_notification_vibrate_call">Wibruj w trakcie rozmowy</string>
+    <string name="pref_summary_mms_notification_vibrate_call">Wibruje w trakcie aktywnego połączenia głosowego</string>
+    <string name="pref_title_mms_notification_vibrate_custom">Własny wzór wibracji</string>
+    <string name="pref_text_mms_notification_vibrate_custom">Format wyłącz/włącz w milisekundach: wyłącz, włącz, wyłącz, włącz, ...</string>
+
+    <!-- Extra Settings: -->
+    <string name="pref_extra_settings">Dodatkowe ustawienia</string>
+
+    <!-- Strip unicode -->
+    <string name="pref_title_strip_unicode">Opuszczaj Unikod</string>
+    <string name="pref_summary_strip_unicode">Zastępuj znaki (ogonki itp.), które nie są wspierane w 160-znakowych wiadomościach SMS</string>
+
+    <!-- Enable emojis -->
+    <string name="pref_title_enable_emojis">Włącz emoji</string>
+    <string name="pref_summary_enable_emojis">Włącz wsparcie dla zestawu 471 unikodowych emotikon emoji</string>
+
+    <!-- Full timestamps -->
+    <string name="pref_title_mms_full_timestamp">Pełna data</string>
+    <string name="pref_summary_mms_full_timestamp">Wyświetla pełną datę oraz czas w wiadomościach</string>
+    <!-- Which timestamps -->
+    <string name="pref_title_mms_use_sent_timestamp">Oryginalna data</string>
+    <string name="pref_summary_mms_use_sent_timestamp">Wyświetla datę wysłania zamiast daty odebrania wiadomości</string>
+
+    <!-- QUICKMESSAGE SUPPORT -->
+    <!-- Preferences -->
+    <string name="pref_quickmessage">Szybka wiadomość</string>
+    <string name="pref_quickmessage_title">Włącz Szybkie wiadomości</string>
+    <string name="pref_quickmessage_summary">Pokaż wyskakujące okno wiadomości</string>
+    <string name="pref_wake_unlock_title">Wybudź i odblokuj</string>
+    <string name="pref_wake_unlock_summary">Wybudź i odblokuj urządzenie przy nadejściu wiadomości (tylko niezabezpieczone ekrany blokady)</string>
+    <string name="pref_close_all_title">Zamknij wszystkie</string>
+    <string name="pref_close_all_summary">Przycisk „Zamknij” zamyka wszystkie wiadomości</string>
+    <string name="message_counter_separator">z</string>
+
+    <!-- QM Dialog box buttons -->
+    <string name="button_close">Zamknij</string>
+    <string name="button_view">Wygląd</string>
+    <string name="button_templates">Szablony</string>
+
+    <!-- Hint text in message body field when keyboard is exposed -->
+    <string name="type_to_reply_text_enter_to_send">Wpisz wiadomość</string>
+
+    <!-- QM Toast -->
+    <string name="toast_sending_message">Wysyłanie</string>
+
+    <!-- QM - Quick reply -->
+    <string name="qm_quick_reply">Szybka odpowiedź</string>
+
 </resources>
