Added and edited Danish strings in Mms
Changed "Hurtigt svar" to "Svar" because of limited space.
Added "Læst" so we don't have to see "Read" with Danish locale.

Change-Id: Ia879ffb09e50289cb9256261ed711847bd2c1e2f

--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -434,7 +434,8 @@
     <string name="toast_sending_message">Sender besked...</string>
 
     <!-- QM - Quick reply -->
-    <string name="qm_quick_reply">Hurtigt svar</string>
+    <string name="qm_quick_reply">Svar</string>
+    <string name="qm_mark_read">Læst</string>
 
     <!-- Settings item for the soft keyboard picker -->
     <string name="pref_title_input_type">Type af softwaretastatur</string>
